--- a/css/index.css
+++ b/css/index.css
@@ -73,8 +73,17 @@ p {
 
 nav {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     margin: 20px;
+}
+
+header nav a {
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    color: black;
+    text-decoration: none;
+    justify-content: flex-end;
+    margin-top: 26px;
 }
 
 .top-content {
